# crowndata-api-python

./: .gitignore  README.md  vercel.json
crowndata-evaluation/: Dockerfile  example.ipynb  pyproject.toml  start.bash
crowndata-evaluation/.vercel/: project.json
crowndata-evaluation/.vercel/output/: builds.json
crowndata-evaluation/crowndata_evaluation/: main.py
crowndata-evaluation/crowndata_evaluation/routers/v1/: helper.py
crowndata-evaluation/crowndata_evaluation/services/: compare_metric.py  group_compare_metric.py  metric.py  state_similarity.py  utils.py
crowndata-evaluation/crowndata_evaluation/services/action_consistency/: action_variance_calculator.py  clustering.py  state_similarity_calculator.py  utils.py
crowndata-evaluation/crowndata_evaluation/services/common/: __init__.py
crowndata-evaluation/crowndata_evaluation/services/kinematics/: resources.py  urdf.py
crowndata-evaluation/crowndata_evaluation/services/shape/: geometry.py
crowndata-evaluation/example_data/data/droid_00000001/: information.json
crowndata-evaluation/public/data/droid_00000000/: information.json
crowndata-evaluation/public/data/droid_00000002/: information.json
crowndata-evaluation/public/data/droid_00000003/: information.json
crowndata-evaluation/public/data/droid_00000004/: information.json
crowndata-evaluation/public/data/droid_00000005/: information.json
crowndata-evaluation/public/data/rm65_abc_20241031_010921/: meta.json
crowndata-evaluation/public/geometries/DROID/: panda.urdf
crowndata-evaluation/tests/: test_main.py
docker/: docker-compose.yml
(+29 files in other folders)
