[tool.poetry]
name = "crowndata-evaluation"
version = "0.1.0"
description = ""
authors = ["Wei Ji <jiwei0706@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
urdf-parser-py = "^0.0.4"
openai = "^1.52.2"
h5py = "^3.12.1"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
